change navbar on mobile to position fixed - add padding to work, about and form sections

--- a/Styles/aboutme.css
+++ b/Styles/aboutme.css
@@ -3,7 +3,7 @@
   flex-direction: column;
   align-items: center;
   text-align: center;
-  margin-top: 20px;
+  margin-top: 50px;
   justify-content: center;
 }
 
