--- a/Styles/general.css
+++ b/Styles/general.css
@@ -8,7 +8,7 @@ body {
   margin-bottom: 0;
   margin-left: 0;
   margin-right: 0;
-  margin-top: 0;
+  margin-top: 30px;
 }
 
 a,
