--- a/Styles/toolbar.css
+++ b/Styles/toolbar.css
@@ -1,6 +1,11 @@
 .toolbar {
   display: flex;
-  height: 4.8%;
+  position: fixed;
+  background-color: white;
+  top: 0;
+  right: 0;
+  left: 0;
+  height: 30px;
 }
 
 .hamburgerMenu {
